--- a/Game_FlipImage/css/styled.css
+++ b/Game_FlipImage/css/styled.css
@@ -18,7 +18,7 @@ body {
   background-color: #333;
 }
 
-.screen > .paper__item, .game-mode > .mode {
+.noti, .screen > .paper__item, .game-play, .game-mode .mode {
   width: 100%;
   max-width: 120px;
   height: 40px;
@@ -61,70 +61,97 @@ body {
   }
 }
 
-.your-point {
+.point {
   color: #fff;
-  font-size: 24px;
 }
-.your-point::before {
-  content: "Your Point: ";
-  font-size: 16px;
+.point .your-point {
+  display: inline-block;
+  font-size: 24px;
+  transform: scale(1);
+  transition: all 0.3s ease;
+  position: relative;
+}
+.point .your-point::after {
+  color: #fff;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.point .your-point.add-point {
+  transform: scale(1.35);
+}
+.point .your-point.add-point::after {
+  content: attr(data-content);
+  animation: kf_youtpoint_after 0.3s ease 0s 1 both;
 }
 @media only screen and (min-width: 1024px) {
-  .your-point {
+  .point {
     text-align: right;
+  }
+}
+
+@keyframes kf_youtpoint_after {
+  0% {
+    opacity: 1;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(0);
+  }
+}
+.game-mode .mode.easy.active, .game-mode .mode.easy:hover {
+  color: #333;
+  border-color: #fff;
+  background-color: #fff;
+}
+.game-mode .mode.medium.active, .game-mode .mode.medium:hover {
+  border-color: #28a745;
+  background-color: #28a745;
+}
+.game-mode .mode.hard.active, .game-mode .mode.hard:hover {
+  border-color: #0fbfff;
+  background-color: #0fbfff;
+}
+.game-mode .mode.super-hard.active, .game-mode .mode.super-hard:hover {
+  border-color: #ffc107;
+  background-color: #ffc107;
+}
+.game-mode .mode.hell.active, .game-mode .mode.hell:hover {
+  border-color: #dc3545;
+  background-color: #dc3545;
+}
+@media only screen and (min-width: 1024px) {
+  .game-mode .mode {
+    cursor: pointer;
   }
 }
 
 .game-mode {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
   margin-top: 20px;
 }
-.game-mode > .mode {
-  max-width: calc(20% - 8px);
-  letter-spacing: 1px;
+.game-mode .game-mode-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
 }
-.game-mode > .mode.active {
+.game-mode .game-mode-container::before {
+  content: "Game Mode:";
+  color: #fff;
+  margin-right: 10px;
+}
+.game-mode .mode {
+  max-width: calc(16% - 8px);
+  letter-spacing: 1px;
+  margin: 0 4px;
+}
+.game-mode .mode.active {
   user-select: none;
   pointer-events: none;
-}
-.game-mode > .mode.easy::after {
-  content: "Easy";
-}
-.game-mode > .mode.easy.active {
-  color: #333;
-  border-color: #fff;
-  background-color: #fff;
-}
-.game-mode > .mode.medium::after {
-  content: "Medium";
-}
-.game-mode > .mode.medium.active {
-  border-color: #28a745;
-  background-color: #28a745;
-}
-.game-mode > .mode.hard::after {
-  content: "Hard";
-}
-.game-mode > .mode.hard.active {
-  border-color: #0fbfff;
-  background-color: #0fbfff;
-}
-.game-mode > .mode.super-hard::after {
-  content: "Super hard";
-}
-.game-mode > .mode.super-hard.active {
-  border-color: #ffc107;
-  background-color: #ffc107;
-}
-.game-mode > .mode.hell::after {
-  content: "Hell";
-}
-.game-mode > .mode.hell.active {
-  border-color: #dc3545;
-  background-color: #dc3545;
 }
 @media only screen and (min-width: 1024px) {
   .game-mode {
@@ -132,37 +159,18 @@ body {
     margin: 0 auto;
     margin-top: 40px;
   }
-  .game-mode > .mode {
-    cursor: pointer;
-  }
-  .game-mode > .mode:hover {
-    color: #333;
-    background-color: #fff;
-  }
 }
 
-.game-level {
-  display: inline-flex;
-  align-items: center;
+.game-play {
+  max-width: 100%;
+  height: 60px;
+  font-size: 20px;
+  margin: 0 auto;
+  margin-top: 20px;
 }
-.game-level .span {
-  color: #fff;
-}
-.game-level input[type=number] {
-  width: 70px;
-  padding: 6px 8px;
-  font-size: 16px;
-  color: #333;
-  font-weight: 600;
-  border: 1px solid #aaa;
-  outline: none;
-  border-radius: 4px;
-  margin-left: 16px;
-}
-@media only screen and (min-width: 1024px) {
-  .game-level {
-    margin-top: 20px;
-  }
+.game-play:hover {
+  border-color: deeppink;
+  background-color: deeppink;
 }
 
 .click-counter {
@@ -198,6 +206,9 @@ body {
   font-size: 34px;
   margin: 2px;
   cursor: pointer;
+}
+.screen > .paper__item:hover {
+  opacity: 0.4;
 }
 .screen > .paper__item:hover, .screen > .paper__item.active {
   background-color: #fff;
@@ -248,6 +259,42 @@ body {
   }
   .screen > .paper__item {
     margin: 6px;
+  }
+}
+
+.noti {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 100px;
+  z-index: 999;
+  height: 30px;
+  border: 0;
+  animation: kf_noti_out 1s ease 0s 1 both;
+}
+.noti.error {
+  background-color: #dc3545;
+}
+.noti.error::before {
+  content: "Cant Open";
+}
+.noti.open {
+  background-color: #0fbfff;
+}
+.noti.open::before {
+  content: "Good";
+}
+.noti.win {
+  background-color: #28a745;
+}
+.noti.win::before {
+  content: "Win game";
+}
+
+@keyframes kf_noti_out {
+  to {
+    top: 0;
+    opacity: 0;
   }
 }
 
