--- a/Game_FlipImage/css/styled.scss
+++ b/Game_FlipImage/css/styled.scss
@@ -71,14 +71,32 @@ body {
     }
 }
 
-
-.your-point {
+.point {
     color: $c_white;
-    font-size: 24px;
 
-    &::before {
-        content: 'Your Point: ';
-        font-size: 16px;
+    .your-point {
+        display: inline-block;
+        font-size: 24px;
+        transform: scale(1);
+        transition: all 0.3s ease;
+        position: relative;
+
+        &::after {
+
+            color: $c_white;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        &.add-point {
+            transform: scale(1.35);
+
+            &::after {
+                content: attr(data-content);
+                animation: kf_youtpoint_after 0.3s ease 0s 1 both;
+            }
+        }
     }
 
     @media only screen and (min-width: 1024px) {
@@ -86,79 +104,101 @@ body {
     }
 }
 
+@keyframes kf_youtpoint_after {
+    0% {
+        opacity: 1;
+        transform: translateY(40px);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(0);
+    }
+}
+
+.game-mode .mode {
+
+    &.easy {
+
+        &.active,
+        &:hover {
+            color: $c_dark;
+            border-color: $c_white;
+            background-color: $c_white;
+        }
+    }
+
+    &.medium {
+
+        &.active,
+        &:hover {
+            border-color: $c_green;
+            background-color: $c_green;
+        }
+    }
+
+    &.hard {
+
+        &.active,
+        &:hover {
+            border-color: $c_blue;
+            background-color: $c_blue;
+        }
+    }
+
+    &.super-hard {
+
+        &.active,
+        &:hover {
+            border-color: $c_yellow;
+            background-color: $c_yellow;
+        }
+    }
+
+    &.hell {
+
+        &.active,
+        &:hover {
+            border-color: $c_red;
+            background-color: $c_red;
+        }
+    }
+
+    @media only screen and (min-width: 1024px) {
+
+        cursor: pointer;
+
+    }
+}
 
 .game-mode {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
     margin-top: 20px;
 
+    .game-mode-container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        position: relative;
 
-    >.mode {
+        &::before {
+            content: 'Game Mode:';
+            color: $c_white;
+            margin-right: 10px;
+        }
+    }
+
+    .mode {
         @extend %box;
-        max-width: calc(20% - 8px);
+        max-width: calc(16% - 8px);
         letter-spacing: 1px;
+        margin: 0 4px;
 
         &.active {
             user-select: none;
             pointer-events: none;
-        }
-
-        &.easy {
-            &::after {
-                content: 'Easy';
-            }
-
-            &.active {
-                color: $c_dark;
-                border-color: $c_white;
-                background-color: $c_white;
-            }
-        }
-
-        &.medium {
-            &::after {
-                content: 'Medium';
-            }
-
-            &.active {
-                border-color: $c_green;
-                background-color: $c_green;
-            }
-        }
-
-        &.hard {
-            &::after {
-                content: 'Hard';
-            }
-
-            &.active {
-                border-color: $c_blue;
-                background-color: $c_blue;
-            }
-        }
-
-        &.super-hard {
-            &::after {
-                content: 'Super hard';
-            }
-
-            &.active {
-                border-color: $c_yellow;
-                background-color: $c_yellow;
-            }
-        }
-
-        &.hell {
-            &::after {
-                content: 'Hell';
-            }
-
-            &.active {
-                border-color: $c_red;
-                background-color: $c_red;
-            }
         }
     }
 
@@ -166,44 +206,22 @@ body {
         max-width: 1024px;
         margin: 0 auto;
         margin-top: 40px;
-
-        >.mode {
-            cursor: pointer;
-
-            &:hover {
-                color: $c_dark;
-                background-color: $c_white;
-            }
-        }
     }
 }
 
+.game-play {
+    @extend %box;
+    max-width: 100%;
+    height: 60px;
+    font-size: 20px;
+    margin: 0 auto;
+    margin-top: 20px;
 
-.game-level {
-    display: inline-flex;
-    align-items: center;
-
-    .span {
-        color: $c_white;
-    }
-
-    input[type="number"] {
-        width: 70px;
-        padding: 6px 8px;
-        font-size: 16px;
-        color: #333;
-        font-weight: 600;
-        border: 1px solid #aaa;
-        outline: none;
-        border-radius: 4px;
-        margin-left: 16px;
-    }
-
-    @media only screen and (min-width: 1024px) {
-        margin-top: 20px;
+    &:hover {
+        border-color: $c_pink;
+        background-color: $c_pink;
     }
 }
-
 
 .click-counter {
     font-size: 20px;
@@ -242,6 +260,10 @@ body {
         font-size: 34px;
         margin: 2px;
         cursor: pointer;
+
+        &:hover {
+            opacity: 0.4;
+        }
 
         &:hover,
         &.active {
@@ -314,5 +336,48 @@ body {
         >.paper__item {
             margin: 6px;
         }
+    }
+}
+
+.noti {
+    @extend %box;
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 100px;
+    z-index: 999;
+    height: 30px;
+    border: 0;
+    animation: kf_noti_out 1s ease 0s 1 both;
+
+    &.error {
+        background-color: $c_red;
+
+        &::before {
+            content: 'Cant Open';
+        }
+    }
+
+    &.open {
+        background-color: $c_blue;
+
+        &::before {
+            content: 'Good';
+        }
+    }
+
+    &.win {
+        background-color: $c_green;
+
+        &::before {
+            content: 'Win game';
+        }
+    }
+}
+
+@keyframes kf_noti_out {
+    to {
+        top: 0;
+        opacity: 0;
     }
 }
